--- a/FirstSpring/pom.xml
+++ b/FirstSpring/pom.xml
@@ -9,7 +9,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
+            <version>4.12</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -44,6 +44,24 @@
             <groupId>cglib</groupId>
             <artifactId>cglib</artifactId>
             <version>3.2.9</version>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.11</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>5.2.2.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>5.2.2.RELEASE</version>
         </dependency>
     </dependencies>
 </project>
