--- a/FirstSpring/pom.xml
+++ b/FirstSpring/pom.xml
@@ -5,6 +5,11 @@
     <version>1.0.0-SNAPSHOT</version>
     <name>FirstSpring</name>
 
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -63,5 +68,9 @@
             <artifactId>spring-test</artifactId>
             <version>5.2.2.RELEASE</version>
         </dependency>
+
+
     </dependencies>
+
+
 </project>
