--- a/SpringWebMvcTest/pom.xml
+++ b/SpringWebMvcTest/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>spring-webflux</artifactId>
             <version>5.2.2.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>5.2.2.RELEASE</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
