--- a/SpringMVCWeb/pom.xml
+++ b/SpringMVCWeb/pom.xml
@@ -79,6 +79,11 @@
       <artifactId>commons-logging</artifactId>
       <version>1.2</version>
     </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.5</version>
+    </dependency>
 
   </dependencies>
 
